# gkrtos

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.builds/: push_to_github.yml  test.yml
.github/workflows/: pages.yaml  test.yaml
arch/rp2040/: rp2040_defs.h
scripts/: clang-format-check.sh  clang-format.sh  generate-docs.sh  pre-commit  probe-init.sh  repo-setup.sh  start-gdb.sh
src/: program.c
src/gkrtos/: asm.S  asm.h  config.h  gkrtos.c  gkrtos.h
src/gkrtos/concurrency/: private_spinlock.h  spinlock.c  spinlock.h
src/gkrtos/hardware/: rp2040.c  rp2040.h
src/gkrtos/interrupts/: pendsv.c  pendsv.h  svcall.c  svcall.h  systick.c  systick.h
src/gkrtos/misc/: misc.h
src/gkrtos/structures/: list.c  list.h
src/gkrtos/syscalls/: syscalls.c  syscalls.h  syscalls_impl.c  syscalls_impl.h
src/gkrtos/tasking/: runner.c  runner.h  tasking.c  tasking.h
